<resources>
    <string name="app_name">DharmaApp</string>
    <string name="loading">Loading ...</string>
    <string name="aboutus">ABOUT US</string>
    <string name="contact">CONTACT</string>
    <string name="catalogs">CATALOGS</string>
    <string name="policy">QUALITY POLICY</string>
    <string name="product_range">PRODUCT RANGE</string>
    <string name="acSection">A C Section</string>
    <string name="architecural_section">Architectural Section</string>
    <string name="hardware_section">Hardware Section</string>
    <string name="other_section">Other Section</string>
    <string name="special_section">Special Section</string>
    <string name="sutecase_section">Sute Case Section</string>
    <string name="texil_section">Texil Section</string>
    <string name="transport_section">Transport Section</string>
    <string name="tub_section">Tub Section</string>
    <string name="intent_key_path">path</string>
    <string name="error_pdf_page">Something Went Wrong in this page</string>
    <string name="qualityservice">QUALITY AND SERVICES</string>
    <string name="quality_service_one"><![CDATA[Our Quality Policy is to supply product as per Customer specifications following good business ethics including applicable regulatory requirements. We determine to strive more customer satisfaction by motivating our work force & proper utilization of resources.]]></string>
    <string name="quality_service_two">We are also committed to implement and maintain our quality management system as per ISO 9001:2008 standard and continuously improve the same in all areas of our operations</string>
    <!--<string name="aboutus_content"><![CDATA[DHARMA EXTRUSIONS PVT. LTD. an ISO 9001–2008 Company was established in the year 2010 by Experienced two Industrialist Brothers. It has started Production of Aluminium Extruded Sections / Profiles in the month of November-2010. With sophisticated extrusion plant. The DEPL success is due to customer oriented sense of enterprise, ensuring very good service & good quality products. The DEPL believes in marching ahead to the principle of Building strong relationship with its customers.   PRODUCTS & SPECIFICATIONS :  DEPL manufactures and supplies wide range of Aluminium Extruded Sections & Profiles in different alloys for general and customized applications such as Architecturals, Aviation, Bus Bar, Bus Body Sections, Constructions, Electrical & Electronics etc..   Extrusions supply with mill finish / Anodizing / Powder Coating.. Common Alloys are 63400 (6063), 19500 (EC), 63401 (E91), 6061, 6005 GRADE and can Supply in various alloys i.e. Also can supply in various special sections as per customer requirements with dimensional tolerance as per relevant IS/Bs/DIN Standards. Product length can supplied up to 6. mtr. In House tool room and well equipped die design for intricate profiles. Price - competitive among others.  FACILITIES The facilities consist of an hydraulic extrusions press capacity with 1000 MTS.   We have complete facilities for melting and casting of Aluminium & its alloys. Extrusions Press with modern puller at run out with post extrusions handling systems and facilities for heat treatment of extruded sections.   We have on-line quality assurance system at every stage of operation to ensure quality of our product .   We have our well equipped tool room with sophisticated machines for manufacturing of extrusion tooling and also having latest testing Laboratory to ensure quality of our products rights from raw materials stage to finish products]]></string>-->
</resources>
