<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.QualityPolicyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp30"
                android:text="@string/qualityservice"
                android:textColor="@color/black"
                android:textSize="@dimen/dp20"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:text="@string/quality_service_one"
                android:textSize="@dimen/dimen17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:text="@string/quality_service_two"
                android:textSize="@dimen/dimen17" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgviewCertification"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp100"
                    android:layout_centerHorizontal="true"
                    android:onClick="onclickFirst"
                    android:src="@drawable/iso_certificate" />

                <ImageView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp100"
                    android:layout_below="@+id/imgviewCertification"
                    android:layout_marginRight="05dp"
                    android:layout_toLeftOf="@+id/imgviewCertification"
                    android:onClick="onclickTwo"
                    android:src="@drawable/vcci_certificate" />


                <ImageView
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp100"
                    android:layout_below="@+id/imgviewCertification"
                    android:layout_marginLeft="05dp"
                    android:layout_toRightOf="@+id/imgviewCertification"
                    android:onClick="onclickThree"
                    android:src="@drawable/vcci_certificate" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>